ingressopen.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-opensearch
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host:
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: opensearch-service
            port:
              number: 9200
  - host:
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: opensearch2-service
            port:
              number: 9200
  - host:
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: opensearch3-service
            port:
              number: 9200
